crates/tapir-script/compiler/src/snapshot_tests/grammar/errors/big_number.tapir
var x = 238472398472917948237;